    * Optionally empty tags with content now have close tag. (RT 49932 41806)
    * Added attribute name validation. (RT 23439) 
    * Added span to @TAGS in AsSubs. (RT 55848)
    * Changed tag encoding to human readable form, e.g. &gt;, and stopped
      re-encoding encoded tags (RT 55835)
    * Added ignore_entities option to disable entity decoding when
      parsing source. (RT 24947)
    * Fix replace_with not setting parent for an array of content. (RT 28204)
    * Removed newline being appended to as_HTML output. (RT 41739)
    * Fix invalid parent for subsclasses. (RT 36247)
    * Fixed #! line in tests (RT 41945)
    * Switched to Module::Build
    * Fixed Perl::Critic errors
    * Added lots of use strict and use warnings

   [TESTS]
    * Added test for optionally empty tags, like A.
    * Added test for invalid attribute name.
    * Added more tests for entity parsing.
    * Add parent test from Christopher J. Madsen. (RT 28204)
    * Add subclass test. (RT 36247)

    [DOCUMENTATION]
    * Docs spelling patch from Ansgar Burchardt <ansgar@43-1.org> (RT 55836)
    * Added definition of white space to as_trimmed_text. (RT 26436)

3.23    Sun Nov 12 11:09:31 CST 2006
    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * Mark-Jason Dominus points out that the fix for as_html was not
      proper, and broken behavior should never be codified.  Fixed
      as_html so an empty string doesn't encode entites, instead of
      blaming the behavior on HTML::Entities.  (RT 18571)

3.22 	Sat Nov 11 21:23:22 CST 2006
    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * HTML::Element::as_XML now only escapes five characters, instead
      of escaping everything but alphanumerics and spaces.  This is
      more in line with the XML spec, and will no longer escape wide
      characters as two (or more) entities.  Resolves RT 14260.  Thanks
      to Carl Franks and somewhere [at] confuzzled.lu for assistance.

    [FIXES]